# 112509

./: .gitignore  1.25  README.md  db.sqlite3  deploy.md  docker.md  orm-example.py  pyproject.toml
core/: settings.py  urls.py  views.py
first/: admin.py  forms.py  models.py  views.py
first/migrations/: 0001_initial.py  0002_remove_post_content.py  0003_post_content.py  0004_post_is_public.py  0005_comment.py  0006_tag_post_tags.py  0007_post_image_alter_post_tags.py  0008_userlogin.py  0008_userlogin_usersignup.py  0009_login_delete_userlogin_delete_usersignup.py  0010_signup.py  0011_delete_login.py  0012_login.py  0013_rename_login_userlogin.py  0014_rename_userlogin_login.py  0015_rename_login_userlogin.py  0016_alter_signup_email_alter_signup_fname_and_more.py  0017_post_video.py  0018_remove_post_video_post_difficulty.py  0019_learner.py  0020_learner_video.py  0021_comment_user.py  0022_post_user.py  0023_signup_gmail_signup_is_teacher.py  0024_userprofile.py  0025_delete_signup_delete_userlogin_alter_learner_video.py  0026_delete_userprofile.py  0027_userprofile.py  0028_userprofile_username_alter_userprofile_user.py  0029_userprofile_avatar.py  0030_alter_userprofile_avatar.py  0031_alter_userprofile_user.py  0032_alter_userprofile_user.py  0033_learner_user_alter_learner_image_and_more.py  0034_learnercomment.py  0035_comment_created_at.py  0036_alter_comment_created_at.py  (+4 more)
templates/: my_path.html
test/: README.md  orm-search.py
文件/: 112年五專第112509專題虛擬主機申請單.docx  甘特圖.xlsx  系統環境圖-草稿.drawio
會議討論紀錄/: 20230512.docx
組員測試/: 系統規格3-2，3-3拷貝.docx
(+46 files in other folders)
