[tool.poetry]
name = "ntub-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-bootstrap5 = "^23.1"
django-extensions = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
djlint = "^1.23.0"
black = "^23.3.0"
werkzeug = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
